@@ -1,3 +1,9 @@
+2008-09-01  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* libtiff/tif_dirwrite.c: modified to write IFDs as either IFD8 or IFD
+	depending on whether the file is bigtiff or classic tiff.
+	http://bugzilla.maptools.org/show_bug.cgi?id=1917
+
 2008-08-12  Edward Lam  <edward@sidefx.com>
 
 	* tools/tiffdump.c: When compiling for Microsoft Windows, apply
